--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,6 @@
-*,ul,li {
+*,
+ul,
+li {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -13,7 +15,8 @@ header {
 }
 
 body {
-  font-family: 'Montserrat', 'Arial','Helvetica','sans-serif';
+  font-family: "Montserrat", "Arial", "Helvetica", "sans-serif";
+  overflow-x: hidden;
 }
 
 .primary {
@@ -21,7 +24,7 @@ body {
 }
 
 .bg-primary {
- background-color: #b28756;
+  background-color: #b28756;
 }
 
 .text-white {
@@ -42,7 +45,6 @@ body {
   background-color: #b28756;
   color: #fff;
   font-weight: bold;
-
 }
 
 .header-content {
@@ -54,25 +56,16 @@ body {
   padding: 0px 15px 0px 15px;
 }
 
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
 .logo {
   width: 100px;
 }
 
 .logoImg {
   height: 80px;
-  width: 80px; 
+  width: 80px;
   border-radius: 50%;
   background-color: #b28756;
-
- }
- 
+}
 
 #menu {
   flex: 1;
@@ -80,7 +73,7 @@ body {
   justify-content: flex-end;
 }
 
-#menu ul  {
+#menu ul {
   display: flex;
 }
 
@@ -90,30 +83,29 @@ body {
   color: inherit;
   text-decoration: none;
   font-weight: 600;
-  display: flex!important;
+  display: flex !important;
   align-items: center;
   height: 100px;
-  border-bottom:5px solid #000;
+  border-bottom: 5px solid #000;
 }
 
-
 #menu li a:hover,
-#menu .active a  {
+#menu .active a {
   color: #ccc;
-  border-bottom:5px solid #b28756;
+  border-bottom: 5px solid #b28756;
 }
 
 .banner-carousel {
   height: calc(100vh - 100px);
   background-color: #333;
-  background-image: url('../images/bg.jpg');
+  background-image: url("../images/bg.jpg");
   background-position: bottom;
   background-size: cover;
   overflow: hidden;
 }
 
 .banner-carousel .carousel-inner {
-  width:  1000vw;
+  width: 1000vw;
   height: 100%;
 }
 
@@ -121,7 +113,7 @@ body {
   width: 100vw;
   height: 100%;
   display: inline-block;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .banner-carousel .carousel-content {
@@ -132,13 +124,12 @@ body {
   justify-content: center;
 }
 
-
-.banner-carousel .carousel-content h1{
+.banner-carousel .carousel-content h1 {
   font-size: 48px;
   text-transform: uppercase;
 }
 
-.banner-carousel .carousel-content h2{
+.banner-carousel .carousel-content h2 {
   text-transform: uppercase;
   margin-bottom: 20px;
 }
@@ -164,4 +155,47 @@ body {
 
 .banner-carousel .carousel-indicators .carousel-indicator.active {
   background-color: #b28756;
+}
+
+.section {
+  padding: 50px 0px 50px 0px;
+}
+
+.section-title,
+.section-description {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.section-title {
+  font-size: 32px;
+}
+
+.section-description {
+  font-size: 14px;
+  color: #707070;
+  margin: 10px 0px 40px 0px;
+}
+
+.section-content {
+  margin: auto;
+  max-width: 1140px;
+  min-height: 100px;
+}
+
+.section.dark {
+  background-color: #000;
+}
+
+.section.dark .section-title {
+  color: #fff;
+}
+
+.section.light {
+  background-color: #f7f7f7;
+}
+
+.section.light .section-title {
+  color: #000;
 }
