--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,27 @@ header {
   color: #fff;
 }
 
+form input,
+form textarea {
+  background-color: rgb(255, 255, 255, 0);
+  border: none;
+  border-bottom: 2px solid #ccc;
+  padding: 5px;
+  outline: none;
+}
+
+form input {
+  height: 40px;
+  font-size: 18px;
+}
+
+form input::placeholder,
+form textarea::placeholder {
+  color: #ccc;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
 body {
   font-family: "Montserrat", "Arial", "Helvetica", "sans-serif";
   overflow-x: hidden;
@@ -29,6 +50,10 @@ body {
 
 .bg-primary {
   background-color: #b28756;
+}
+
+.bg-white {
+  background-color: #fff;
 }
 
 .text-white {
@@ -44,6 +69,17 @@ body {
   font-size: 14px;
   outline: none;
   cursor: pointer;
+}
+
+.btn-sm {
+  width: 150px;
+  height: 50px;
+}
+
+.btn-dark {
+  background-color: #000;
+  color: #fff;
+  font-weight: bold;
 }
 
 .btn-primary {
@@ -251,21 +287,17 @@ body {
 .section-service img {
   height: 70px;
   margin-bottom: 25px;
-  /* border-right: 5px solid #ccc; */
 }
 
 .section-service h4 {
   margin-bottom: 20px;
   text-transform: uppercase;
-  /* border-right: 5px solid #ccc; */
 }
-
 
 .section-service p {
   font-size: 14px;
   color: #999;
   border-radius: 50px;
-  /* border-right: 5px solid #ccc; */
 }
 
 .section-projects {
@@ -294,7 +326,6 @@ body {
   padding: 15px;
   border-right: 1px solid #ccc;
   border-bottom: 5px solid #eee;
-
 }
 
 .section-projects--projects-nav li:last-child {
@@ -338,7 +369,6 @@ body {
   height: inherit;
 }
 
-
 .section-projects--photoinfo {
   display: none;
   flex-direction: column;
@@ -374,7 +404,6 @@ body {
 }
 
 .section-ourteam-container {
-
   padding: 80px 0px;
   background-color: rgb(0, 0, 0, 0.8);
 }
@@ -387,13 +416,11 @@ body {
   overflow: hidden;
   margin: auto;
   color: #000;
-
 }
 
 .section-ourteam .carousel-inner {
   width: 1000vw;
   height: 100%;
-
 }
 
 .section-ourteam .carousel-item {
@@ -418,7 +445,6 @@ body {
   font-weight: 600;
 }
 
-
 .section-ourteam .carousel-content p {
   font-size: 14px;
   margin: 5px 0px 20px 0px;
@@ -436,8 +462,6 @@ body {
 .section-ourteam .carousel-content a img:hover {
   background-color: #b28756;
 }
-
-
 
 .section-ourteam .carousel-content {
   display: flex;
@@ -467,3 +491,367 @@ body {
 .section-ourteam .carousel-indicators .carousel-indicator.active {
   background-color: #b28756;
 }
+
+.section-clients-reviews {
+  height: 50vh;
+  overflow: hidden;
+}
+
+.section-clients-reviews .carousel-inner {
+  width: 1000vw;
+  height: 100%;
+}
+
+.section-clients-reviews .carousel-item {
+  width: 100vw;
+  height: 100%;
+  display: inline-block;
+  padding: 150px;
+}
+
+.section-clients-reviews .carousel-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.section-clients-reviews .carousel-content h3 {
+  font-size: 24px;
+  text-transform: capitalize;
+  margin: 30px 0px 5px 0px;
+}
+
+.section-clients-reviews .carousel-content h4 {
+  text-transform: capitalize;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+.section-clients-reviews .carousel-content p {
+  color: #999;
+  line-height: 25px;
+  margin: 20px;
+  text-align: center;
+}
+
+.section-clients-reviews .carousel-indicators {
+  width: 100vw;
+  height: 20px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-clients-reviews .carousel-indicator {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  border: 2px solid #b28756;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.section-clients-reviews .carousel-indicators .carousel-indicator.active {
+  background-color: #b28756;
+}
+
+.section-partners--container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100vw;
+  max-width: 1140px;
+}
+
+.section-partners--container img {
+  height: 50px;
+  width: auto;
+  margin: 20px 30px;
+}
+
+/* Prices */
+.section-prices {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section-prices--card {
+  padding: 30px;
+  background-color: #fff;
+  width: 265px;
+  margin: 0px 10px;
+}
+
+.section-prices--card .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-prices--card h1,
+.section-prices--card h2,
+.section-prices--card p {
+  /* text-align: center; */
+}
+
+.section-prices--card .title {
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #888;
+}
+
+.section-prices--card .value {
+  font-size: 32px;
+  margin-top: 12px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
+
+.section-prices--card .month {
+  font-size: 14px;
+  font-weight: 600;
+  color: #999;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.section-prices--card .item {
+  font-size: 14px;
+  font-weight: 600;
+  color: #888;
+  margin-bottom: 16px;
+}
+
+/* Some Facts */
+.section-some-facts {
+  display: flex;
+}
+
+.section-some-fact {
+  flex: 1;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  padding: 15px;
+}
+
+.section-some-fact h1 {
+  color: #b28756;
+  display: block;
+  font-size: 52px;
+  margin-bottom: 10px;
+}
+
+.section-some-fact h2 {
+  font-size: 18px;
+  height: 50px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.section-some-fact h4 {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.section-some-fact p {
+  font-size: 14px;
+  color: #999;
+  border-radius: 50px;
+}
+
+.section-premium {
+  display: flex;
+}
+
+.section-premium--left {
+  width: 380px;
+
+  margin: auto;
+}
+
+.section-premium--right {
+  flex: 1;
+  padding: 30px;
+}
+
+.section-premium--right .item {
+  display: flex;
+  flex-direction: row;
+  margin-right: 250px;
+  margin-top: 20px;
+}
+
+.section-premium--right .item .item-check {
+  margin-right: 20px;
+}
+
+.section-premium--right .item .item-content h1 {
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.section-premium--right .item .item-content p {
+  color: #999;
+  font-size: 14px;
+  line-height: 20px;
+  margin-top: 8px;
+}
+
+.section-social--container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  max-width: 1140px;
+}
+
+.section-social--container h1 {
+  text-transform: uppercase;
+  color: #999;
+  font-size: 18px;
+  margin-right: 45px;
+}
+
+.section-social--container img {
+  height: 30px;
+  width: 30px;
+  margin-right: 15px;
+}
+
+.section-social--container .icon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 0px 25px;
+  /* background-color: red; */
+}
+
+.section-social--container .icon img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.section-social--container .icon p {
+  font-size: 16px;
+  color: #999;
+  font-weight: 600;
+}
+
+.section-contact .row {
+  display: flex;
+  flex: 1;
+  margin: 40px 0px;
+}
+
+.section-contact .row:last-of-type {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-contact .row input {
+  width: 100%;
+  margin: 0px 10px;
+}
+
+.section-map {
+  background-image: url('../images/mapa.jpg');
+  background-size: cover;
+  background-position: center;
+  min-height: 300px;
+  padding: 30px 0px;
+}
+
+.section-map .section-map--container {
+  max-width: 1140px;
+  margin: auto;
+}
+
+.section-map--info {
+  max-width: 50%;
+  padding: 40px;
+  color: 0;
+  background-color: #ffff;
+}
+
+.section-map--info-item {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  color: #999;
+  margin-top: 15px;
+}
+
+
+.section-map--info-item-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ccc;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.section-map--info-item-icon img {
+  height: 18px;
+  width: auto;
+}
+
+footer {
+  padding: 40px 0px;
+  color: #fff;
+  background-color: #000;
+}
+
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  max-width: 1140px;
+  margin: auto;
+}
+
+.footer-content .col {
+  width: 380px;
+}
+
+
+.footer-content .col.social {}
+
+.footer-content .col.description {
+  font-size: 14px;
+  color: #ccc;
+  font-weight: 500;
+  padding: 15px;
+  line-height: 25px;
+}
+
+.footer-content .col.newsletter form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.footer-content .col.newsletter form input::placeholder {
+  text-align: center;
+}
+
+.footer-content .col.newsletter form button {
+  margin-top: 35px;
+}
+
+
+.footer-content .col.newsletter {}
