--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -775,7 +775,7 @@ body {
 }
 
 .section-map {
-  background-image: url('../images/mapa.jpg');
+  background-image: url("../images/mapa.jpg");
   background-size: cover;
   background-position: center;
   min-height: 300px;
@@ -801,7 +801,6 @@ body {
   color: #999;
   margin-top: 15px;
 }
-
 
 .section-map--info-item-icon {
   display: flex;
@@ -836,7 +835,6 @@ footer {
 .footer-content .col {
   width: 380px;
 }
-
 
 .footer-content .col.description {
   font-size: 14px;
@@ -897,14 +895,12 @@ footer {
   color: #b28756;
 }
 
-
 /* Responsivo Tablet */
 @media (min-width: 450px) and (max-width: 800px) {
   .header-content {
     justify-content: space-between;
     margin: 0px 20px;
   }
-
 
   .menu-hamburguer {
     display: inline;
@@ -934,7 +930,7 @@ footer {
   #menu ul {
     flex-direction: column;
     width: 100vw;
-    margin: 45px
+    margin: 45px;
   }
 
   #menu ul li {
@@ -956,7 +952,7 @@ footer {
 
   .section-aboutus {
     flex-direction: column;
-    margin: 0px 30px
+    margin: 0px 30px;
   }
 
   .section-aboutus .btn-container {
@@ -1014,7 +1010,6 @@ footer {
     margin-top: 40px;
   }
 
-
   .section-social--container h1 {
     display: none;
   }
@@ -1050,7 +1045,7 @@ footer {
 
   .footer-content .col {
     width: 100%;
-    margin: 10px 40px
+    margin: 10px 40px;
   }
 }
 
@@ -1060,7 +1055,6 @@ footer {
     justify-content: space-between;
     margin: 0px 20px;
   }
-
 
   .menu-hamburguer {
     display: inline;
@@ -1090,7 +1084,7 @@ footer {
   #menu ul {
     flex-direction: column;
     width: 100vw;
-    margin: 0px 45px
+    margin: 0px 45px;
   }
 
   #menu ul li {
@@ -1154,19 +1148,40 @@ footer {
     margin-bottom: 25px;
   }
 
+  .section-projects--projects-nav {
+    margin: 0 20px;
+  }
+
+  .section-projects--projects-nav {
+    padding: 0;
+  }
+
+  .section-projects--projects-nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .section-projects--projects-nav li {
+    border: 0;
+  }
+
+  .section-projects--projects-nav li.active {
+    color: #b28756;
+    border: 0;
+  }
+
   .section-service p {
     font-size: 16px;
   }
 
-
   .section-ourteam {
-    max-width: 580px;
+    max-width: 280px;
   }
 
   .section-clients-reviews .carousel-content p {
     padding: 0 30px;
   }
-
 
   .partner-container {
     display: flex;
@@ -1191,6 +1206,7 @@ footer {
   }
 
   .section-premium {
+    display: block;
     flex-wrap: wrap;
   }
 
@@ -1198,14 +1214,12 @@ footer {
     display: flex;
     justify-content: center;
     width: 100%;
-
   }
 
   .section-premium--right .item {
     width: 100%;
     margin-top: 40px;
   }
-
 
   .section-social--container h1 {
     display: none;
@@ -1241,7 +1255,6 @@ footer {
   .section-social--container .icon img {
     margin: auto;
   }
-
 
   .share-icon {
     display: none;
@@ -1279,8 +1292,6 @@ footer {
 
   .footer-content .col {
     width: 100%;
-    margin: 10px 40px
+    margin: 10px 40px;
   }
-
-
 }
